Cocktail item display alignment fixed  with tag

--- a/src/app/cocktail/components/cocktail-item/cocktail-item.component.scss
+++ b/src/app/cocktail/components/cocktail-item/cocktail-item.component.scss
@@ -44,6 +44,10 @@ $cocktail-item-border: 1px solid grey;
       display: flex;
       width: auto;
       height: auto;
+
+      app-tags {
+        display: flex;
+      }
     }
 
     .ingredients {
